<resources>
    <!--Login-->
    <string name="app_name">Mob201_Assignment</string>
    <string name="edtUsername">StudentID/TeacherID</string>
    <string name="edtPassword">Password</string>
    <string name="btnLoginConfirm">Confirm</string>
    <string name="txtSignUp">Sign Up to be a Student</string>
    <string name="txtLoginStudent">Student</string>
    <string name="txtLoginTeacher">Teacher</string>

    <string name="error_login_username">Username must not be empty</string>
    <string name="error_login_password">Password must not be empty</string>
    <string name="error_login_done">Login Successfully </string>
    <string name="error_login_cancel">Login Failed because StudentID or Password are not exists</string>
    <string name="error_login_cancel_teacher">Login Failed because TeacherID or Password are not exists</string>

    <!--Student-->
    <string name="FullName">Fullname:</string>
    <string name="StudentID">Student ID:</string>

    <!--Sign Up-->
    <string name="edtStudentID">Student ID</string>
    <string name="edtFullname">Full Name</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="title_activity_teacher">Teacher</string>

    <string name="error_student_id">Student ID must have 5 characters</string>
    <string name="error_student_fullname">Student Full Name must bigger than 5 characters</string>
    <string name="error_student_password">Student Password must bigger than 5 characters</string>
    <string name="error_student_done">Sign Up Successfully</string>
    <string name="error_student_cancel">This StudentID has already Sign Up</string>

    <!--Bottom Navigation Teacher-->
    <string name="title_courses_insert">Insert Courses</string>
    <string name="title_courses_list">Courses and Class List</string>
    <string name="title_student_list">Remove Student</string>
    <string name="title_class_insert">Insert Class</string>

    <!--Bottom Navigation Student-->
    <string name="title_activity_student_courses">StudentCoursesActivity</string>
    <string name="title_student_courses">Participate Courses</string>
    <string name="title_student_courses_list">Classes Joined List</string>
    <string name="title_student_exam_list">Schedule</string>

    <!--Insert Courses In Teacher Activity-->
    <string name="edtCoursesName">Courses Name</string>
    <string name="btnPickDate">Pick Date</string>
    <string name="btnInsertCourses">Insert Courses</string>
    <string name="edtPickDateCourses">Pick Season for Courses</string>
    <string name="btnPickSeason">Pick Season</string>

    <string name="error_courses_name">Courses Name must bigger than 5 characters</string>
    <string name="error_courses_season">Please Pick Up Courses Season</string>
    <string name="error_courses_done">Insert Courses Sucessfully</string>
    <string name="error_courses_cancel">Insert Courses Failed because matches Season</string>

    <string name="CoursesName">Cours Season:</string>
    <string name="CoursesRemainSlot">Courses Name:</string>

    <!--Main Screen Student-->
    <string name="txtCoursesMain">Courses</string>
    <string name="txtMapMain">Maps</string>
    <string name="txtNewsMain">News</string>
    <string name="txtShareMain">Social</string>

    <!--Insert Class In Teacher Activity-->
    <string name="edtClassName">Class Name</string>
    <string name="edtPickNumberOfDay">Pick Schedule Of Class</string>
    <string name="btnPickNumberOfDay">Pick Days</string>
    <string name="edtPickDateExam">Pick Date exam for Class</string>
    <string name="btnInsertClass">Insert Class</string>
    <string name="edtClassesAmount">Class Amount</string>

    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>

    <string name="error_class_name">Class Name must bigger than 5 characters</string>
    <string name="error_class_schedule">Please Pick Schedule for Class</string>
    <string name="error_class_exam">Please Pick Date for Exam</string>
    <string name="error_class_format">Please Insert Courses Before Add Class</string>
    <string name="error_class_amount">Classes Amount must be bigger than 0</string>
    <string name="error_class_amount_format">Classes Amount must be a number</string>
    <string name="error_class_done">Insert Class Sucessfully</string>
    <string name="error_class_cancel">Insert Class Failed</string>

    <string name="error_class_signup">You just participate this classes</string>
    <string name="error_class_signup_error">You cannot join this classes because you already joined it before</string>
    <string name="error_class_insert">Classes is not exists</string>

    <string name="ClassName">Class Name:</string>
    <string name="ClassSchedule">Class Schedule:</string>
    <string name="ClassExam">Exam Date:</string>
    <string name="DateExam">Exam Date:</string>
    <string name="edtRemainAmount">Remain:</string>
    <string name="title_dialog_class">Class in Courses</string>

    <string name="title_dialog_amount">Remain slot in Classes</string>
    <string name="title_dialog_amount_message">This classes remain: </string>
    <string name="Slot"> slot</string>
    <string name="title_student_joined_class">Classes you have Joined</string>


    <!--News Activity-->
    <string name="titleWebViewDialog">Web View</string>
    <string name="title_activity_maps">Maps</string>

    <!--Facebook Function-->
    <string name="facebook_app_id">319684832226870</string>
    <string name="fb_login_protocol_scheme">fb319684832226870</string>

    <!--Student Participate Courses-->
    <string name="txtStudentCoursesRegistration">Courses Registration</string>
    <string name="txtStudentRegistrationSeason">Courses Season</string>
    <string name="btnStudentCoursesSearch">Search Class by Courses Season</string>

    <!--Title for list-->
    <string name="title_student_exam_date">Classes Information</string>
    <string name="title_teacher_coursesList">Courses List</string>
    <string name="title_teacher_studentList">Signed Student List</string>
    <string name="btnExam">Search</string>
    <string name="title_teacher_season_pick">Pick up Season For Courses</string>
    <string name="logout">Log Out</string>
    <string name="log_out_question">Do you want to Logout this Account?</string>
    <string name="title_log_out">Logout</string>

    <string name="log_out_class_title">Exit classes</string>
    <string name="log_out_class">Do you really want to Logout this Classes?</string>
    <string name="log_out_class_yes">You just exit 1 classes</string>

    <string name="log_out_teacher_courses_title">Remove Courses</string>
    <string name="log_out_teacher_class_title">Remove Classes</string>
    <string name="log_out_teacher_student_title">Remove Student</string>
    <string name="log_out_teacher_courses_yes">You just remove 1 courses</string>
    <string name="log_out_teacher_classes_yes">You just remove 1 classes</string>
    <string name="log_out_teacher_student_yes">You just remove 1 student</string>
    <string name="log_out_teacher_class">Do you really want to Remove this Classes ?. Removing this Class cause that student cannot see this class anymore</string>
    <string name="log_out_teacher_courses">Do you really want to Remove this Courses ?. Removing this Courses cause that every classes inside Courses will be delete</string>
    <string name="log_out_teacher_student">Do you really want to Remove this Student ?. Removing Student cause that this Student cannot Login Anymore</string>
    <string name="login_name">Login</string>
    <string name="signup_name">Sign Up</string>
    <string name="student_name">Student</string>
    <string name="news_name">News</string>
    <string name="social_name">Social</string>

</resources>
