<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:weightSum="5"
        android:padding="@dimen/layout_padding_size">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:weightSum="10"
                android:orientation="horizontal"
                android:gravity="center">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="3.1"
                    android:layout_gravity="center">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/CoursesName"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ClassName"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ClassSchedule"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ClassExam"
                        android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5"
                    android:gravity="center">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2019 String Summer"
                        android:id="@+id/txtExamClassSeason"
                        android:gravity="center"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="lap trinh android"
                        android:id="@+id/txtExamClassName"
                        android:gravity="center"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="abasdfasfasfsdafasdfasdfasdfasf"
                        android:gravity="center"
                        android:id="@+id/txtExamSchedule"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11-11-2019"
                        android:id="@+id/txtExamDate"
                        android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>