<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dungCustom1"
        android:padding="@dimen/layout_padding_size">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilClassName"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:counterMaxLength="40"
            app:counterEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spnTeacherCoursesSeason">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtClassName"
                android:textSize="@dimen/edt_text_size"
                android:hint="@string/edtClassName"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edtPickDateExam"
            android:enabled="false"
            android:ems="10"
            android:textSize="@dimen/edt_text_size"
            android:id="@+id/edtPickDateExam"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPickNumberOfDay"/>

    <Button
            android:text="@string/btnPickDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_pickdate_size"
            android:id="@+id/btnPickDateExam"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/dungCustom1"
            android:background="@drawable/ic_btn_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPickNumberOfDay"/>

    <Button
            android:text="@string/btnInsertClass"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dungCustom1"
            android:textSize="@dimen/btn_text_size"
            android:background="@drawable/ic_btn_confirm"
            android:id="@+id/btnInsertClass"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPickDateExam"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height_size"
            app:srcCompat="@drawable/img_logo"
            android:id="@+id/imageView5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edtPickNumberOfDay"
            android:ems="10"
            android:textSize="@dimen/edt_text_size"
            android:enabled="false"
            android:id="@+id/edtPickNumberOfDay"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilClassName"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <Button
            android:text="@string/btnPickNumberOfDay"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_pickdate_size"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/dungCustom1"
            android:background="@drawable/ic_btn_confirm"
            android:id="@+id/btnPickNumberOfDay"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilClassName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/spnTeacherCoursesSeason"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_bg_spinner"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>