<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dungCustom1"
        android:padding="@dimen/layout_padding_size">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height_size"
            app:srcCompat="@drawable/img_logo"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="35"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/tilCoursesName"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtCoursesName"
                android:hint="@string/edtCoursesName"
                android:textSize="@dimen/edt_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
            android:text="@string/edtPickDateCourses"
            android:layout_width="250dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:id="@+id/txtPickDate"
            android:textSize="@dimen/edt_text_size"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilCoursesName"/>

    <Button
            android:text="@string/btnPickSeason"
            android:layout_width="100dp"
            android:background="@drawable/ic_btn_confirm"
            android:textColor="@color/dungCustom1"
            android:textSize="@dimen/btn_text_size"
            android:layout_height="@dimen/btn_pickdate_size"
            android:id="@+id/btnPickDateCourses"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilCoursesName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <Button
            android:text="@string/btnInsertCourses"
            android:layout_width="150dp"
            android:background="@drawable/ic_btn_confirm"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/dungCustom1"
            android:layout_height="wrap_content"
            android:id="@+id/btnInsertCourses"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPickDate"/>

</android.support.constraint.ConstraintLayout>