<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginSignup.LoginActivity"
        android:padding="@dimen/layout_padding_size"
        android:background="@color/dungCustom1">

    <ImageView
            android:src="@drawable/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height_size"
            android:background="@null"
            android:id="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:id="@+id/tilUsername"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleLogin">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtUsername"
                android:textSize="@dimen/edt_text_size"
                android:hint="@string/edtUsername"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:passwordToggleEnabled="true"
            android:id="@+id/tilPassword"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/edt_text_size"
                android:id="@+id/edtPassword"
                android:hint="@string/edtPassword"
                />
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/btnLoginConfirm"
            android:layout_width="@dimen/btn_width_size"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginConfirm"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/dungCustom1"
            android:background="@drawable/ic_btn_confirm"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

    <TextView
            android:text="@string/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignUp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <RadioGroup
            android:checkedButton="@+id/rdStudent"
            android:id="@+id/toggleLogin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/ic_bg_pink"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/rdStudent"
                android:background="@drawable/ic_bg_toggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/txtLoginStudent"
                android:textColor="@color/dungCustom1"/>

        <RadioButton
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:id="@+id/rdTeacher"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_bg_toggle"
                android:button="@null"
                android:gravity="center"
                android:text="@string/txtLoginTeacher"
                android:textColor="@color/dungCustom1"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>