<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding_size"
        android:background="@color/dungCustom1">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height_size"
            app:srcCompat="@drawable/img_logo"
            android:id="@+id/imageView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/txtStudentCoursesRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/txtStudentRegistrationSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Spinner
            android:layout_width="240dp"
            android:layout_height="23dp"
            android:id="@+id/spnStudentCourses"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_bg_spinner"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <Button
            android:text="@string/btnStudentCoursesSearch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStudentCoursesSearch"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spnStudentCourses"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/dungCustom1"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_btn_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStudentCoursesSearch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>


</android.support.constraint.ConstraintLayout>